# netto

./: Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs  stats.rs  walker.rs
src/loc/: counter.rs  git.rs  language.rs  mod.rs
src/output/: badges.rs  charts.rs  cli.rs  mod.rs  web.rs
