[package]
name = "codescan"
version = "0.1.0"
edition = "2021"
description = "Find out how much of your codebase you actually wrote"
license = "MIT"
repository = "https://github.com/YOURUSERNAME/codescan"
readme = "README.md"
keywords = ["loc", "git", "statistics", "cli", "code"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codescan"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "suggestions"] }
ignore = "0.4"
git2 = { version = "0.18", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
indicatif = "0.17"
anyhow = "1"
thiserror = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
