[package]
name = "netto"
version = "0.1.0"
edition = "2021"
description = "A beautiful codebase analytics tool to find out how much you actually wrote."
license = "MIT"
repository = "https://github.com/YOUR_GITHUB_USERNAME/netto"
readme = "README.md"
keywords = ["loc", "git", "statistics", "cli", "code"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "netto"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "suggestions"] }
ignore = "0.4"
git2 = { version = "0.18", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
indicatif = "0.17"
anyhow = "1"
thiserror = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
